# ai-contained-provider-aws-cli

./: README.md  apk-packages.txt  pyproject.toml
src/ai_contained/provider/aws_cli/: __init__.py  aws_cli_tool.py  command_filter.py  piper_process.py  types.py
tests/: conftest.py  test_aws_cli.py  test_aws_cli_tool.py  test_command_filter.py  test_piper_process.py
