[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-contained-provider-aws-cli"
version = "0.0.2"
description = "AWS CLI provider for AI-Contained"
requires-python = ">=3.12"
dependencies = [
    "ai-contained-core-mcp @ https://github.com/AI-Contained/ai-contained-base/archive/refs/tags/v0.3.1.zip#subdirectory=packages/core-mcp",
    "ai-contained-provider-trust-client @ https://github.com/AI-Contained/ai-contained-provider-trust-client/archive/refs/heads/main.zip",
]

[project.optional-dependencies]
dev = [
    "ai-contained-provider-aws-secrets @ https://github.com/AI-Contained/ai-contained-provider-aws-secrets/archive/refs/heads/main.zip",
    "ai-contained-provider-trust-server-daemon @ https://github.com/AI-Contained/ai-contained-provider-trust-server/archive/refs/heads/main.zip#subdirectory=packages/daemon",
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-describe>=3.1",
    "assertpy>=1.1",
    "mypy>=1.20.2",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "focus: run only focused tests (use with -m focus)",
]

[project.entry-points."ai_contained.provider"]
aws_cli = "ai_contained.provider.aws_cli:register"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = ["D203", "D213"]  # conflict with D211/D212

[tool.ruff.lint.isort]
known-first-party = ["ai_contained"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]  # no docstrings required in tests

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
strict = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ai_contained"]
